<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="item"
            type="himanshu.project.aleph.mytools.data.Tools" />
        <variable
            name="viemodel"
            type="himanshu.project.aleph.mytools.viewmodels.ToolsViewModel" />


    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:onClick="@{clickListener}"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_card_elevation"
        app:cardMaxElevation="@dimen/card_card_elevation"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                app:toolImageUrl="@{item.toolImageUrl}"
                android:scaleType="centerInside" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginLeft="@dimen/appbar_padding_top"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:text="@string/tool_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:text="@{item.toolName}"
                    android:textStyle="bold"
                    android:textColor="@color/colorTxt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginLeft="@dimen/appbar_padding_top"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:text="@string/tool_total_count" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    app:text="@{Integer.toString(item.toolCount)}" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_marginBottom="@dimen/appbar_padding_top"
                android:layout_marginLeft="@dimen/appbar_padding_top"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView_tool_borrowed_count_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:text="@string/total_borrowed_count" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTxt"
                    android:layout_marginLeft="@dimen/appbar_padding_top"
                    android:textStyle="bold"
                    app:text="@{Integer.toString(item.toolBorrowedCount)}" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>


